8289562: Change bugs.java.com and bugreport.java.com URL's to https

Reviewed-by: mbaesken
Backport-of: 1f484dae4efaa60cf18a3d4df947c05f1497bd5b